# Snake-Game

./: CMakeLists.txt
Assets/Shaders/: basic.fs.glsl  basic.vs.glsl
Include/glad/: glad.h
Source/: main.cpp
Source/graphics/: glad.c  mb_renderer.cpp  mb_renderer.h  mb_shader.cpp  mb_shader.h  mb_texture.cpp  mb_texture.h
Source/logic/: mb_object.cpp  mb_object.h  mb_world.cpp  mb_world.h  snake.cpp  snake.h
Source/utils/: mb_FileDialog.mm  mb_files.h  mb_utils.cpp  mb_utils.h
